spacing fix

--- a/style.css
+++ b/style.css
@@ -315,6 +315,7 @@ body {
 
 @media (max-width: 991px) {
   .primary-winding {
+    margin-top: 20px;
     max-width: 100%;
   }
 }
@@ -322,6 +323,7 @@ body {
 .secondary-winding {
   font-family: Poppins, sans-serif;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 @media (max-width: 991px) {
